--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,17 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;  
 }
+
 
 a {
   font-weight: 500;
@@ -25,8 +25,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: auto;
   display: flex;
+  justify-content: center;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
